--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -34,6 +34,14 @@ html {
 
 /*Side Panel*/
 
+[ng\:cloak], [ng-cloak], .ng-cloak {
+  display: none !important;
+}
+
+.xout {
+    display: none;
+}
+
 .singleResult {
     padding: 10px;
 }
@@ -66,29 +74,30 @@ html {
     transition: transform 0.3s;
 }
 
+.mobilePhoneResults {
+    display: none;
+}
+
+
+}
 .fadeout {
     transform: translateX(-100%);
 }
-
 .fadeoutButton {
     transform: translateX(-330px);
 }
-
 .fadeIn {
     transform: translateX(100%);
 }
-
 .fadeInButton {
     transform: translateX(330px);
 }
-
 .closeButton {
     position: absolute;
     left: 330px;
     z-index: 500;
     transition: transform 0.3s;
 }
-
 .menuButton {
     position: absolute;
     left: 330px;
@@ -96,65 +105,52 @@ html {
     z-index: 500;
     transition: transform 0.3s;
 }
-
 .hiddenButton {
     position: absolute;
     left: 0px;
     top: 0px;
     z-index: 100;
 }
-
 .img-responsive {
     padding: 15px 30px 0px 30px;
 }
-
 #results {
     padding: 10px 10px 0 10px;
     height: 100%;
 }
-
 .trans {
     background: none;
 }
-
 .addButton {
     background-color: white;
 }
-
 .addButton:hover {
     color: #449d44;
     border-color: #398439;
     background-color: white;
 }
-
 .addButtonBlue {
     background-color: white;
 }
-
 .addButtonBlue:hover {
     color: #4285F4;
     border-color: #4285F4;
     background-color: white;
 }
-
 .addButtonBlue:focus {
     color: #4285F4;
     border-color: #4285F4;
     background-color: white;
 }
-
 .marginBottom {
     margin-bottom: 5px;
 }
-
 hr {
     margin-top: 10px;
     margin-bottom: 10px;
 }
 
-
 /*   Search bar */
-
 #custom-search-input {
     padding: 10px;
     margin: 7px;
@@ -162,12 +158,10 @@ hr {
     border-radius: 6px;
     background-color: #fff;
 }
-
 #custom-search-input input {
     border: 0;
     box-shadow: none;
 }
-
 #custom-search-input button {
     margin: 5px 0 0 0;
     background: none;
@@ -177,26 +171,21 @@ hr {
     padding: 0 8px 0 10px;
     border-left: solid 1px #ccc;
 }
-
 #custom-search-input button:hover {
     border: 0;
     box-shadow: none;
     border-left: solid 1px #ccc;
 }
-
 #custom-search-input .glyphicon-search {
     font-size: 23px;
 }
 
-
 /* Ratings/Stars */
-
 .rating:not(:checked) > input {
     position: absolute;
     top: -9999px;
     clip: rect(0, 0, 0, 0);
 }
-
 .rating:not(:checked) > label {
     float: right;
     width: 1em;
@@ -209,22 +198,18 @@ hr {
     color: #ddd;
     text-shadow: 1px 1px #bbb, 2px 2px #666, .1em .1em .2em rgba(0, 0, 0, .5);
 }
-
 .rating:not(:checked) > label:before {
     content: '★ ';
 }
-
 .rating > input:checked ~ label {
     color: #f70;
     text-shadow: 1px 1px #c60, 2px 2px #940, .1em .1em .2em rgba(0, 0, 0, .5);
 }
-
 .rating:not(:checked) > label:hover,
 .rating:not(:checked) > label:hover ~ label {
     color: gold;
     text-shadow: 1px 1px goldenrod, 2px 2px #B57340, .1em .1em .2em rgba(0, 0, 0, .5);
 }
-
 .rating > input:checked + label:hover,
 .rating > input:checked + label:hover ~ label,
 .rating > input:checked ~ label:hover,
@@ -233,26 +218,21 @@ hr {
     color: #ea0;
     text-shadow: 1px 1px goldenrod, 2px 2px #B57340, .1em .1em .2em rgba(0, 0, 0, .5);
 }
-
 .rating > label:active {
     position: relative;
     top: 2px;
     left: 2px;
 }
 
-
 /*Modals*/
-
 form.go-right {
     width: 528px;
     margin: 20px;
 }
-
 form.go-right > div {
     position: relative;
     overflow: hidden;
 }
-
 form.go-right input,
 form.go-right textarea {
     width: 100%;
@@ -265,17 +245,14 @@ form.go-right textarea {
     padding: 8px 12px;
     outline: 0;
 }
-
 form.go-right input:valid,
 form.go-right textarea:valid {
     background: white;
 }
-
 form.go-right input:focus,
 form.go-right textarea:focus {
     border-color: #4285F4;
 }
-
 form.go-right input:focus + label,
 form.go-right textarea:focus + label {
     background: #4285F4;
@@ -285,7 +262,6 @@ form.go-right textarea:focus + label {
     z-index: 2;
     text-transform: uppercase;
 }
-
 form.go-right label {
     -webkit-transition: background 0.2s, color 0.2s, top 0.2s, bottom 0.2s, right 0.2s, left 0.2s;
     transition: background 0.2s, color 0.2s, top 0.2s, bottom 0.2s, right 0.2s, left 0.2s;
@@ -294,35 +270,29 @@ form.go-right label {
     padding: 7px 6px;
     font-weight: normal;
 }
-
 form.go-right textarea {
     display: block;
     resize: vertical;
 }
-
 form.go-bottom input,
 form.go-bottom textarea {
     padding: 12px 12px 12px 12px;
 }
-
 form.go-bottom label {
     top: 0;
     bottom: 0;
     left: 0;
     width: 100%;
 }
-
 form.go-bottom input:focus,
 form.go-bottom textarea:focus {
     padding: 4px 6px 20px 6px;
 }
-
 form.go-bottom input:focus + label,
 form.go-bottom textarea:focus + label {
     top: 100%;
     margin-top: -16px;
 }
-
 form.go-right label {
     border-radius: 0 5px 5px 0;
     height: 100%;
@@ -331,7 +301,6 @@ form.go-right label {
     width: 100%;
     margin-right: -100%;
 }
-
 form.go-right input:focus + label,
 form.go-right textarea:focus + label {
     right: 0;
@@ -339,25 +308,20 @@ form.go-right textarea:focus + label {
     width: 40%;
     padding-top: 5px;
 }
-
 textarea {
     width: 100%;
     resize: none;
 }
-
 .modal-body {
     padding-top: 0;
     padding-bottom: 0;
 }
-
 .fade {
     z-index: 1000;
 }
-
 .form-control {
     background: transparent;
 }
-
 #message:focus,
 #name:focus,
 #address:focus,
@@ -368,3 +332,77 @@ textarea {
     padding-right: 41%;
 }
 
+/*Media Queries*/
+
+/* Portrait and Landscape */
+@media screen and (max-width: 432px) {
+    .sidePanel {
+        width: 100%;
+        height: 60%;
+        top: 40%;
+    }
+    
+    #LogoAndSearch {
+        display: none;
+    }
+    
+    #map {
+        height: 40%;
+        position: relative;
+        z-index: 0;
+    }
+    
+    .fadeIn {
+        transform: translateY(-100%);
+    }
+    
+    .fadeout {
+        transform: translateY(100%);
+    }
+    
+    .mapFadeOut {
+        height: 100%;
+    }
+    
+    .fadeout::after {
+        display: none;
+    }
+    
+    .menuButton {
+/*        position: absolute;
+        top: 40%;
+        left: 85%;
+        z-index: 500;
+        transition: transform 0.3s;*/
+        display: none;
+    }
+    
+    .closeButton {
+/*        position: absolute;
+        left: 80%;
+        top: 40%;
+        z-index: 500;
+        transition: transform 0.3s;*/
+        display: none;
+    }
+    
+    .xout {
+        display: initial;
+    }
+    
+    .mobilePhoneResults {
+        position: absolute;
+        top: 94%;
+        display: flex;
+        height: 6%;
+        width: 100%;
+        background-color: white;
+        z-index: 5;
+        justify-content: center;
+
+    }
+
+
+}
+
+}
