more media queries

--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -410,6 +410,12 @@ textarea {
         background-color: white;
         z-index: 5;
     }
+    /* modal */
+    
+    form.go-right {
+        width: 90%;
+        margin: 20px;
+    }
 }
 
 /* Not mobile */
