--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -341,7 +341,7 @@ textarea {
 /*Media Queries*/
 
 /* mobile */
-@media screen and (max-width: 432px) {
+@media screen and (max-width: 432px) and (max-aspect-ratio: 13/9) {
     .sidePanel {
         width: 100%;
         height: 60%;
@@ -418,13 +418,7 @@ textarea {
     }
 }
 
-/* Not mobile */
-@media screen and (min-width: 432px) {
-    #map {
-        height: 100%;
-        position: relative;
-        z-index: 0;
-    }
-}
+
 
 }
+
